@@ -12,6 +12,8 @@ cod-tools (unreleased)
       - the 'F 1 1 d' space group description;
       - the 'C 1 c 1 (a-3/8,b-3/8,a+2*c)' space group description;
       - the 'F 1 2/d 1'  space group description.
+    - COD::DateTime:
+      - the 'canonicalise_timestamp()' subroutine.
   * Changed:
     - cif_cod_check:
       - modifying the warning message about missing authors to use the same
